# akvs_intellistate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: dart.yml
example/: pubspec.yaml
example/lib/: main.dart
lib/: akvs_intellistate.dart
lib/application/: controller.dart  coordinator.dart  usecase.dart
lib/async/: ai_async.dart
lib/behavior/: ab_test.dart  behavior_config.dart  behavior_event.dart  behavior_reporter.dart  feature_tracker.dart  funnel_tracker.dart  interaction_tracker.dart  retention_tracker.dart  screen_tracker.dart  session_tracker.dart  user_segment.dart
lib/core/: computed.dart  dependency_tracker.dart  effect.dart  engine_mode.dart  intellistate.dart  memory_manager.dart  scheduler.dart  signal.dart  strict_mode.dart
lib/core/engine/: dart_engine.dart  engine_selector.dart  rust_engine.dart  (+1 more)
lib/devtools/: learning_mode.dart  signal_history.dart  signal_inspector.dart  strict_mode.dart
lib/domain/: domain_result.dart  domain_signal.dart  domain_snapshot.dart  domain_store.dart  store_scope.dart  use_case.dart
lib/ffi/: bindings.dart  rust_bridge.dart
lib/flutter/: signal_builder.dart  watch_extension.dart
lib/intelligence/: intelligence_bridge.dart  intelligence_tracker.dart  self_healing.dart
rust/: Cargo.toml
rust/src/: lib.rs
rust_core/: Cargo.toml  build.sh
rust_core/src/: behavior.rs  ffi.rs  intelligence.rs  lib.rs  resilience.rs  scheduler.rs  signal.rs
test/: behavior_test.dart  domain_test.dart  hybrid_signal_test.dart  intelligence_test.dart  signal_test.dart
