[package]
name = "intellistate_core"
version = "1.0.0"
edition = "2021"
description = "High-performance Rust core engine for AKVS IntelliState"
publish = false

[lib]
name = "intellistate_core"
crate-type = ["cdylib", "lib"]

[dependencies]
parking_lot = "0.12"

[dev-dependencies]
# No extra dev dependencies needed

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
